import * as React from 'react';
import { mount } from 'enzyme';
import { axe, toHaveNoViolations } from 'jest-axe';
import { GrowCss } from '@growcss/theme';
import { StyledImage as Image } from '../src/components/image';

expect.extend(toHaveNoViolations);

test('Image load small image if no placeholder image is set', () => {
  const wrapper = mount(
    <Image
      srcSet="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg medium"
      preload
      theme={GrowCss}
    />,
  );

  expect(wrapper).toMatchSnapshot();

  const placeholder = wrapper.find('.gc-image img.placeholder').html();

  expect(placeholder).toContain('img class="placeholder');
  expect(placeholder).toContain(
    'src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg"',
  );
  expect(placeholder).toContain('crossorigin="anonymous"');
});

test('Image a11y support', async () => {
  const wrapper = mount(
    <Image
      srcSet="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg"
      alt="test image"
      theme={GrowCss}
    />,
  );

  expect(await axe(wrapper.html())).toHaveNoViolations();
});

test(`should have correct src, title and alt attributes`, () => {
  const wrapper = mount(
    <Image
      srcSet="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg medium"
      title="Title for the image"
      alt="Alt text for the image"
      theme={GrowCss}
    />,
  );

  expect(wrapper).toMatchSnapshot();

  const pictureImage = wrapper.find('.gc-image picture img').html();
  const sourePictureImage = wrapper.find('.gc-image picture source').html();

  expect(pictureImage.getAttribute(`src`)).toEqual(`test_image.jpg`);
  expect(sourePictureImage.getAttribute(`srcSet`)).toEqual(
    `https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg`,
  );
  expect(pictureImage.getAttribute(`title`)).toEqual(`Title for the image`);
  expect(pictureImage.getAttribute(`alt`)).toEqual(`Alt text for the image`);
});
