// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image load small image if no placeholder image is set 1`] = `
<WithTheme(ExtendedImage)
  preload={true}
  srcSet="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg medium"
  theme={
    Object {
      "body": Object {
        "backgroundColor": "#fff",
      },
      "colors": Object {
        "black": "#000",
        "blue": Object {
          "100": "#ebf8ff",
          "200": "#bee3f8",
          "300": "#90cdf4",
          "400": "#63b3ed",
          "500": "#4299e1",
          "600": "#3182ce",
          "700": "#2b6cb0",
          "800": "#2c5282",
          "900": "#2a4365",
        },
        "gray": Object {
          "100": "#f7fafc",
          "200": "#edf2f7",
          "300": "#e2e8f0",
          "400": "#cbd5e0",
          "500": "#a0aec0",
          "600": "#718096",
          "700": "#4a5568",
          "800": "#2d3748",
          "900": "#1a202c",
        },
        "green": Object {
          "100": "#f0fff4",
          "200": "#c6f6d5",
          "300": "#9ae6b4",
          "400": "#68d391",
          "500": "#48bb78",
          "600": "#38a169",
          "700": "#2f855a",
          "800": "#276749",
          "900": "#22543d",
        },
        "indigo": Object {
          "100": "#ebf4ff",
          "200": "#c3dafe",
          "300": "#a3bffa",
          "400": "#7f9cf5",
          "500": "#667eea",
          "600": "#5a67d8",
          "700": "#4c51bf",
          "800": "#434190",
          "900": "#3c366b",
        },
        "orange": Object {
          "100": "#fffaf0",
          "200": "#feebc8",
          "300": "#fbd38d",
          "400": "#f6ad55",
          "500": "#ed8936",
          "600": "#dd6b20",
          "700": "#c05621",
          "800": "#9c4221",
          "900": "#7b341e",
        },
        "pink": Object {
          "100": "#fff5f7",
          "200": "#fed7e2",
          "300": "#fbb6ce",
          "400": "#f687b3",
          "500": "#ed64a6",
          "600": "#d53f8c",
          "700": "#b83280",
          "800": "#97266d",
          "900": "#702459",
        },
        "purple": Object {
          "100": "#faf5ff",
          "200": "#e9d8fd",
          "300": "#d6bcfa",
          "400": "#b794f4",
          "500": "#9f7aea",
          "600": "#805ad5",
          "700": "#6b46c1",
          "800": "#553c9a",
          "900": "#44337a",
        },
        "red": Object {
          "100": "#fff5f5",
          "200": "#fed7d7",
          "300": "#feb2b2",
          "400": "#fc8181",
          "500": "#f56565",
          "600": "#e53e3e",
          "700": "#c53030",
          "800": "#9b2c2c",
          "900": "#742a2a",
        },
        "teal": Object {
          "100": "#e6fffa",
          "200": "#b2f5ea",
          "300": "#81e6d9",
          "400": "#4fd1c5",
          "500": "#38b2ac",
          "600": "#319795",
          "700": "#2c7a7b",
          "800": "#285e61",
          "900": "#234e52",
        },
        "transparent": "transparent",
        "white": "#fff",
        "yellow": Object {
          "100": "#fffff0",
          "200": "#fefcbf",
          "300": "#faf089",
          "400": "#f6e05e",
          "500": "#ecc94b",
          "600": "#d69e2e",
          "700": "#b7791f",
          "800": "#975a16",
          "900": "#744210",
        },
      },
      "divider": Object {
        "breakpoint": "small down",
        "highlight": Object {
          "color": "#fff",
          "width": "1px",
        },
        "horizontal": Object {
          "margin": "1em",
        },
        "margin": "1rem 0rem",
        "section": Object {
          "margin": "2rem",
        },
        "shadow": Object {
          "color": "#e2e8f0",
          "width": "1px",
        },
        "typography": Object {
          "color": "#000",
          "size": "16px",
          "transform": "uppercase",
          "weight": "bold",
        },
        "vertical": Object {
          "margin": "1rem",
        },
      },
      "global": Object {
        "borderColor": "#4a5568",
        "breakpoints": Object {
          "large": 1024,
          "medium": 640,
          "small": 0,
          "xlarge": 1200,
          "xxlarge": 1440,
        },
        "hidpiBreakpoints": Object {
          "hidpi-1": 1,
          "hidpi-1-5": 1.5,
          "hidpi-2": 2,
          "hidpi-3": 3,
          "retina": 2,
        },
        "margin": "1rem",
        "padding": "1rem",
        "position": "1rem",
        "printBreakpoint": "large",
        "stdWebDpi": 96,
        "textDirection": "ltr",
      },
      "grid": Object {
        "columns": 12,
        "gutterBreakpoint": "small",
        "marginGutters": Object {
          "medium": "30px",
          "small": "20px",
        },
        "maxWidth": "75rem",
        "paddingGutters": Object {
          "medium": "30px",
          "small": "20px",
        },
      },
      "image": Object {
        "breakpoints": Object {
          "large": "1024w",
          "medium": "640w",
          "xlarge": "1200w",
          "xxlarge": "1440w",
        },
        "previewBackgroundColor": "#4a5568",
      },
      "link": Object {
        "color": Object {
          "active": "#90cdf4",
          "focus": "#90cdf4",
          "hover": "#2b6cb0",
          "main": "#4299e1",
        },
      },
      "shadows": Object {
        "default": "0 2px 4px 0 rgba(0,0,0,0.10)",
        "inner": "inset 0 2px 4px 0 rgba(0,0,0,0.06)",
        "lg": "0 15px 30px 0 rgba(0,0,0,0.11), 0 5px 15px 0 rgba(0,0,0,0.08)",
        "md": "0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08)",
        "none": "none",
        "outline": "0 0 0 3px rgba(52,144,220,0.5)",
      },
      "spinner": Object {
        "color": "#000",
        "size": Object {
          "large": 24,
          "medium": 16,
          "small": 8,
          "xlarge": 48,
          "xxlarge": 96,
        },
      },
      "typography": Object {
        "antialiased": true,
        "breakpoints": Object {
          "medium": Array [
            3.052,
            2.441,
            1.953,
            1.563,
            1.25,
            1,
          ],
          "small": Array [
            2.488,
            2.074,
            1.728,
            1.44,
            1.2,
            1,
          ],
        },
        "codeFontFamily": "\\"SFMono-Medium\\", \\"SF Mono\\", \\"Segoe UI Mono\\", \\"Roboto Mono\\", \\"Ubuntu Mono\\", Menlo, Consolas, Courier, monospace",
        "color": "#000",
        "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize": "16px",
        "lineHeight": 1.45,
        "weightBold": "bold",
        "weightNormal": 400,
      },
      "zIndex": Object {
        "0": 0,
        "10": 10,
        "20": 20,
        "30": 30,
        "40": 40,
        "50": 50,
        "auto": "auto",
      },
    }
  }
>
  <figure-element__FigureElement
    className="gc-image"
  >
    <figure
      className="gc-image figure-element__FigureElement-sc-92c2gs-0 gOCodI"
    >
      <aspect-ratio-placeholder__AspectRatioPlaceholder>
        <div
          className="aspect-ratio-placeholder__AspectRatioPlaceholder-sc-1p97xwn-0 bhPjyK"
        >
          <div
            style={
              Object {
                "paddingBottom": "75%",
                "width": "100%",
              }
            }
          />
          <placeholder-element__PlaceholderElement
            className="placeholder"
            crossOrigin="anonymous"
            src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg"
          >
            <img
              className="placeholder placeholder-element__PlaceholderElement-sc-1fnxcwp-0 fQZFih"
              crossOrigin="anonymous"
              src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg"
            />
          </placeholder-element__PlaceholderElement>
          <picture-element__PictureElement
            className="preload"
          >
            <picture
              className="preload picture-element__PictureElement-sc-5wdao-0 jPicbX"
            >
              <img
                onError={[Function]}
                onLoad={[Function]}
                src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg"
              />
            </picture>
          </picture-element__PictureElement>
        </div>
      </aspect-ratio-placeholder__AspectRatioPlaceholder>
    </figure>
  </figure-element__FigureElement>
</WithTheme(ExtendedImage)>
`;

exports[`should have correct src, title and alt attributes 1`] = `
<WithTheme(ExtendedImage)
  alt="Alt text for the image"
  srcSet="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg medium, https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/600x/mountain.jpg large"
  theme={
    Object {
      "body": Object {
        "backgroundColor": "#fff",
      },
      "colors": Object {
        "black": "#000",
        "blue": Object {
          "100": "#ebf8ff",
          "200": "#bee3f8",
          "300": "#90cdf4",
          "400": "#63b3ed",
          "500": "#4299e1",
          "600": "#3182ce",
          "700": "#2b6cb0",
          "800": "#2c5282",
          "900": "#2a4365",
        },
        "gray": Object {
          "100": "#f7fafc",
          "200": "#edf2f7",
          "300": "#e2e8f0",
          "400": "#cbd5e0",
          "500": "#a0aec0",
          "600": "#718096",
          "700": "#4a5568",
          "800": "#2d3748",
          "900": "#1a202c",
        },
        "green": Object {
          "100": "#f0fff4",
          "200": "#c6f6d5",
          "300": "#9ae6b4",
          "400": "#68d391",
          "500": "#48bb78",
          "600": "#38a169",
          "700": "#2f855a",
          "800": "#276749",
          "900": "#22543d",
        },
        "indigo": Object {
          "100": "#ebf4ff",
          "200": "#c3dafe",
          "300": "#a3bffa",
          "400": "#7f9cf5",
          "500": "#667eea",
          "600": "#5a67d8",
          "700": "#4c51bf",
          "800": "#434190",
          "900": "#3c366b",
        },
        "orange": Object {
          "100": "#fffaf0",
          "200": "#feebc8",
          "300": "#fbd38d",
          "400": "#f6ad55",
          "500": "#ed8936",
          "600": "#dd6b20",
          "700": "#c05621",
          "800": "#9c4221",
          "900": "#7b341e",
        },
        "pink": Object {
          "100": "#fff5f7",
          "200": "#fed7e2",
          "300": "#fbb6ce",
          "400": "#f687b3",
          "500": "#ed64a6",
          "600": "#d53f8c",
          "700": "#b83280",
          "800": "#97266d",
          "900": "#702459",
        },
        "purple": Object {
          "100": "#faf5ff",
          "200": "#e9d8fd",
          "300": "#d6bcfa",
          "400": "#b794f4",
          "500": "#9f7aea",
          "600": "#805ad5",
          "700": "#6b46c1",
          "800": "#553c9a",
          "900": "#44337a",
        },
        "red": Object {
          "100": "#fff5f5",
          "200": "#fed7d7",
          "300": "#feb2b2",
          "400": "#fc8181",
          "500": "#f56565",
          "600": "#e53e3e",
          "700": "#c53030",
          "800": "#9b2c2c",
          "900": "#742a2a",
        },
        "teal": Object {
          "100": "#e6fffa",
          "200": "#b2f5ea",
          "300": "#81e6d9",
          "400": "#4fd1c5",
          "500": "#38b2ac",
          "600": "#319795",
          "700": "#2c7a7b",
          "800": "#285e61",
          "900": "#234e52",
        },
        "transparent": "transparent",
        "white": "#fff",
        "yellow": Object {
          "100": "#fffff0",
          "200": "#fefcbf",
          "300": "#faf089",
          "400": "#f6e05e",
          "500": "#ecc94b",
          "600": "#d69e2e",
          "700": "#b7791f",
          "800": "#975a16",
          "900": "#744210",
        },
      },
      "divider": Object {
        "breakpoint": "small down",
        "highlight": Object {
          "color": "#fff",
          "width": "1px",
        },
        "horizontal": Object {
          "margin": "1em",
        },
        "margin": "1rem 0rem",
        "section": Object {
          "margin": "2rem",
        },
        "shadow": Object {
          "color": "#e2e8f0",
          "width": "1px",
        },
        "typography": Object {
          "color": "#000",
          "size": "16px",
          "transform": "uppercase",
          "weight": "bold",
        },
        "vertical": Object {
          "margin": "1rem",
        },
      },
      "global": Object {
        "borderColor": "#4a5568",
        "breakpoints": Object {
          "large": 1024,
          "medium": 640,
          "small": 0,
          "xlarge": 1200,
          "xxlarge": 1440,
        },
        "hidpiBreakpoints": Object {
          "hidpi-1": 1,
          "hidpi-1-5": 1.5,
          "hidpi-2": 2,
          "hidpi-3": 3,
          "retina": 2,
        },
        "margin": "1rem",
        "padding": "1rem",
        "position": "1rem",
        "printBreakpoint": "large",
        "stdWebDpi": 96,
        "textDirection": "ltr",
      },
      "grid": Object {
        "columns": 12,
        "gutterBreakpoint": "small",
        "marginGutters": Object {
          "medium": "30px",
          "small": "20px",
        },
        "maxWidth": "75rem",
        "paddingGutters": Object {
          "medium": "30px",
          "small": "20px",
        },
      },
      "image": Object {
        "breakpoints": Object {
          "large": "1024w",
          "medium": "640w",
          "xlarge": "1200w",
          "xxlarge": "1440w",
        },
        "previewBackgroundColor": "#4a5568",
      },
      "link": Object {
        "color": Object {
          "active": "#90cdf4",
          "focus": "#90cdf4",
          "hover": "#2b6cb0",
          "main": "#4299e1",
        },
      },
      "shadows": Object {
        "default": "0 2px 4px 0 rgba(0,0,0,0.10)",
        "inner": "inset 0 2px 4px 0 rgba(0,0,0,0.06)",
        "lg": "0 15px 30px 0 rgba(0,0,0,0.11), 0 5px 15px 0 rgba(0,0,0,0.08)",
        "md": "0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08)",
        "none": "none",
        "outline": "0 0 0 3px rgba(52,144,220,0.5)",
      },
      "spinner": Object {
        "color": "#000",
        "size": Object {
          "large": 24,
          "medium": 16,
          "small": 8,
          "xlarge": 48,
          "xxlarge": 96,
        },
      },
      "typography": Object {
        "antialiased": true,
        "breakpoints": Object {
          "medium": Array [
            3.052,
            2.441,
            1.953,
            1.563,
            1.25,
            1,
          ],
          "small": Array [
            2.488,
            2.074,
            1.728,
            1.44,
            1.2,
            1,
          ],
        },
        "codeFontFamily": "\\"SFMono-Medium\\", \\"SF Mono\\", \\"Segoe UI Mono\\", \\"Roboto Mono\\", \\"Ubuntu Mono\\", Menlo, Consolas, Courier, monospace",
        "color": "#000",
        "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize": "16px",
        "lineHeight": 1.45,
        "weightBold": "bold",
        "weightNormal": 400,
      },
      "zIndex": Object {
        "0": 0,
        "10": 10,
        "20": 20,
        "30": 30,
        "40": 40,
        "50": 50,
        "auto": "auto",
      },
    }
  }
  title="Title for the image"
>
  <figure-element__FigureElement
    className="gc-image"
  >
    <figure
      className="gc-image figure-element__FigureElement-sc-92c2gs-0 gOCodI"
    >
      <aspect-ratio-placeholder__AspectRatioPlaceholder>
        <div
          className="aspect-ratio-placeholder__AspectRatioPlaceholder-sc-1p97xwn-0 bhPjyK"
        >
          <div
            style={
              Object {
                "paddingBottom": "75%",
                "width": "100%",
              }
            }
          />
          <picture-element__PictureElement
            className="visible"
          >
            <picture
              className="visible picture-element__PictureElement-sc-5wdao-0 jPicbX"
            >
              <source
                key="-1954652935"
                srcSet="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg 640w, https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/600x/mountain.jpg 1024w"
              />
              <img
                alt="Alt text for the image"
                onError={[Function]}
                onLoad={[Function]}
                src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/600x/mountain.jpg"
                title="Title for the image"
              />
            </picture>
          </picture-element__PictureElement>
        </div>
      </aspect-ratio-placeholder__AspectRatioPlaceholder>
    </figure>
  </figure-element__FigureElement>
</WithTheme(ExtendedImage)>
`;
